// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows clearing all data 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "success": undefined,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`allows clearing individual data fields 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "address1": "Home",
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "accountNumber": "7",
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`allows saving data 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "address1": "Home",
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "accountNumber": "7",
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": "James",
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`doesn't change state when removing if missing info 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "address1": "Home",
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "accountNumber": "7",
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": "James",
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`has a known initial state 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;
